tests/language/module/compile_error/compile_error.agate
# result: runtime error
IO.println("before") # expect: before
# expect: test:2: Error at 'undefined': Variable 'undefined' is used but not defined.
import "module" for Module # expect: Could not compile module 'module'.
